# Boosting

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile_old  README.md
Boosting/: CMakeLists.txt  Makefile
Boosting/include/: SimpleHashTable.h  allParams.h  base.h  boosting.h  compModel.h  crossvalid.h  greedyRMA.h  lpbr.h  repr.h  serRMA.h
Boosting/src/: base.cpp  boosting.cpp  compModel.cpp  crossvalid.cpp  driver.cpp  greedyRMA.cpp  lpbr.cpp  rmaParams.cpp
data/: servo.data
include/: AbstractHashTable.h  Time.h  compModel.h  parRMA.h  serRMA.h
predTrained/: README.md  build.sh
predTrained/src/: main.cpp  runTrainedModel.cpp  runTrainedModel.h
scripts/: build.sh  build_debug.sh  build_gurobi.sh  clean_build.sh
src/: argBoost.cpp  argBoost.h  base.h  boosting.cpp  boosting.h  boosting_config.h.in  compModel.cpp  crossvalid.h  dataBoost.cpp  dataBoost.h  driver.cpp  lpbr.h  main.cpp  parRMA.cpp  repr.cpp  repr.h  rmaParams.h  serRMA.cpp
src/lpbr/: lpbr.cpp
visualization/: README.md
visualization/src/: arguments.py  generatePlot.py
